--- a/aula012ex/ex014/ex014.html
+++ b/aula012ex/ex014/ex014.html
@@ -7,17 +7,17 @@
     <title>Exercicio JavaScript</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <title>Titulo</title>
+        <h1>Hora do dia</h1>
     </header>
     <section>
-        <div>
-            Testando
+        <div id="msg">
+            <p id="textoHora"></p>
         </div>
 
-        <div>
-            
+        <div id="foto">
+            <img id="imagem" src="fotomanha.png" alt="Foto do dia">
         </div>
     </section>
     <footer>
